deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: viyan-elastic-vectordb-chat
  namespace: viyan-elastic-vectordb-chat
  labels:
    app: viyan-elastic-vectordb-chat
    app.kubernetes.io/component: viyan-elastic-vectordb-chat
    app.kubernetes.io/instance: viyan-elastic-vectordb-chat
    app.kubernetes.io/name: viyan-elastic-vectordb-chat
    app.kubernetes.io/part-of: viyan-elastic-vectordb-chat-app
    app.openshift.io/runtime-namespace: viyan-elastic-vectordb-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viyan-elastic-vectordb-chat
  template:
    metadata:
      labels:
        app: viyan-elastic-vectordb-chat
        deployment: viyan-elastic-vectordb-chat
    spec:
      containers:
        - name: viyan-elastic-vectordb-chat
          image: 'ghcr.io/viyancs/viyan-elastic-vectordb-chat:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8501
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: viyan-elastic-vectordb-chat
  namespace: viyan-elastic-vectordb-chat
  labels:
    app: viyan-elastic-vectordb-chat
    app.kubernetes.io/component: viyan-elastic-vectordb-chat
    app.kubernetes.io/instance: viyan-elastic-vectordb-chat
    app.kubernetes.io/name: viyan-elastic-vectordb-chat
    app.kubernetes.io/part-of: viyan-elastic-vectordb-chat-app
    app.openshift.io/runtime-version: latest
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8501-tcp
      protocol: TCP
      port: 8501
      targetPort: 8501
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: viyan-elastic-vectordb-chat
    deployment: viyan-elastic-vectordb-chat
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: viyan-elastic-vectordb-chat
  namespace: viyan-elastic-vectordb-chat
  labels:
    app: viyan-elastic-vectordb-chat
    app.kubernetes.io/component: viyan-elastic-vectordb-chat
    app.kubernetes.io/instance: viyan-elastic-vectordb-chat
    app.kubernetes.io/name: viyan-elastic-vectordb-chat
    app.kubernetes.io/part-of: viyan-elastic-vectordb-chat-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: viyan-elastic-vectordb-chat
    weight: 100
  port:
    targetPort: 8501-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
